--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
 
     <title>Bee with you | 404 Page not found</title>
     <meta name="description" content=" ">
-    <link rel="canonical" href="http://xxx.xxx/404.html" />
+    <link rel="canonical" href="https://bee-with-you.github.io/404.html" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://xxx.xxx/404.html" />
+<meta property="og:url" content="https://bee-with-you.github.io/404.html" />
 
 
     <meta name="twitter:card" content="summary"/>
@@ -135,7 +135,7 @@
     var search_results = "results";
     var enable_mermaid =  null ;
 
-    var baseURL = "http://xxx.xxx/";
+    var baseURL = "https://bee-with-you.github.io/";
 </script>
 
 
