--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
     <title>Bee with you</title>
     <meta name="description" content=" ">
-    <link rel="canonical" href="http://xxx.xxx/" />
+    <link rel="canonical" href="https://bee-with-you.github.io/" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta property="og:title" content="Bee with you" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://xxx.xxx/" />
+<meta property="og:url" content="https://bee-with-you.github.io/" />
 
 
     <meta name="twitter:card" content="summary"/>
@@ -306,7 +306,7 @@
     var search_results = "results";
     var enable_mermaid =  null ;
 
-    var baseURL = "http://xxx.xxx/";
+    var baseURL = "https://bee-with-you.github.io/";
 </script>
 
 
