--- a/series/index.html
+++ b/series/index.html
@@ -5,12 +5,12 @@
 
     <title>Bee with you | Series</title>
     <meta name="description" content=" ">
-    <link rel="canonical" href="http://xxx.xxx/series/" />
+    <link rel="canonical" href="https://bee-with-you.github.io/series/" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta property="og:title" content="Series" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://xxx.xxx/series/" />
+<meta property="og:url" content="https://bee-with-you.github.io/series/" />
 
 
     <meta name="twitter:card" content="summary"/>
@@ -378,7 +378,7 @@
     var search_results = "results";
     var enable_mermaid =  null ;
 
-    var baseURL = "http://xxx.xxx/";
+    var baseURL = "https://bee-with-you.github.io/";
 </script>
 
 
