Change the post to publish mode: draft = false

--- a/404.html
+++ b/404.html
@@ -121,13 +121,16 @@
 
 
 
+    
+    
+
 
 
 
 <script type="text/javascript">
     var mode_custom = "auto";
-    var postsCount =  0 ;
-    var arrPosts = [];
+    var postsCount =  1 ;
+    var arrPosts = [{"link":"https://bee-with-you.github.io/posts/first-post/","plain":"This is a test post.\n","pubDate":"2024-07-10","title":"First Post"}];
     var search_theEnd = "The End";
     var search_nothing = "Nothing was found";
     var search_found = "Found";
