Update titles/contents from config.toml, add tags/categories to the first post

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bee with you | 404 Page not found</title>
+    <title>Bee With You | 404 Page not found</title>
     <meta name="description" content=" ">
     <link rel="canonical" href="https://bee-with-you.github.io/404.html" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
@@ -130,7 +130,7 @@
 <script type="text/javascript">
     var mode_custom = "auto";
     var postsCount =  1 ;
-    var arrPosts = [{"link":"https://bee-with-you.github.io/posts/first-post/","plain":"This is a test post.\n","pubDate":"2024-07-10","title":"First Post"}];
+    var arrPosts = [{"link":"https://bee-with-you.github.io/posts/first-post/","plain":"This is a test post.\n","pubDate":"2024-07-10","title":"Resources"}];
     var search_theEnd = "The End";
     var search_nothing = "Nothing was found";
     var search_found = "Found";
