--- a/series/index.html
+++ b/series/index.html
@@ -286,7 +286,7 @@
     <div class="list-item">
         <div class="icon-other-root">
             
-                <div class="icon-other" style="background-image: url( /images/default.jpg );"></div>
+                <div class="icon-other" style="background-image: url( /images/example.jpeg );"></div>
             
         </div>
         <div class="list-right">
