Update about me

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Bee With You | About</title>
-    <meta name="description" content="A website to provide support for families. ">
+    <meta name="description" content="warning This website does not provide medical advice, but rather a platform for knowledge sharing. ">
     <link rel="canonical" href="https://bee-with-you.github.io/about/" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta property="og:title" content="About" />
@@ -237,7 +237,25 @@
     
         <div class="content">
             <div class="content-self">
-                <p>A website to provide support for families.</p>
+                <blockquote>
+<p>warning
+This website does not provide medical advice, but rather a platform for knowledge sharing. Please contact at <em><a href="mailto:beewithyoutoday@gmail.com">beewithyoutoday@gmail.com</a></em> whenever you feel comfortable.</p>
+</blockquote>
+<p>As a mother of a child with hypospadias, a condition I had never heard of before his birth, I have endured significant physical and emotional challenges over the past few years. I build this website to offer resources and support for families affected by hypospadias, a birth defect that primarily impacts the urethra in male infants. Its objectives include:</p>
+<ul>
+<li>
+<p><strong>Raising awareness of hypospadias</strong>: As one of the most common congenital conditions, occurring in approximately 1 in every 150–300 male births, hypospadias often remains underdiscussed due to the sensitivity surrounding its impact on the penis, leading to potential embarrassment.</p>
+</li>
+<li>
+<p><strong>Supporting patients and educating them</strong>: Ensuring that individuals with hypospadias understand the condition, empowering them to live normal lives with confidence, free from shame or isolation.</p>
+</li>
+<li>
+<p><strong>Offering a resource for parents</strong>: Providing guidance to help parents make informed decisions regarding treatment options, such as whether to pursue surgery, how to select a qualified surgeon, understanding potential outcomes with or without surgery, and strategies for communicating with their child.</p>
+</li>
+<li>
+<p><strong>Sharing pre- and post-surgery knowledge</strong>: Offering valuable insights and information that can help families navigate both the preparation for and recovery from surgery.</p>
+</li>
+</ul>
 
             </div>
             
