Minor update on the about description to the email address

--- a/about/index.html
+++ b/about/index.html
@@ -204,7 +204,7 @@
         
         <div class="hero-content">
             <div class="hero-title">About</div>
-            <div>About the website</div>
+            <div>beewithyoutoday@gmail.com</div>
         </div>
     </div>
 
